--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,12 @@
+# EditorConfig is awesome: https://EditorConfig.org
+
 # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
+indent_style = space
+indent_size = 4
 end_of_line = lf
-insert_final_newline = true
-
-# Matches multiple files with brace expansion notation
-# Set default charset
-[*]
 charset = utf-8
-
-# Tab indentation (no size specified)
-indent_style = tab
+trim_trailing_whitespace = true
+insert_final_newline = true
